mod vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,11 @@
-{
+
+
+ {
   "version": 2,
   "builds": [
-   {
-    "src": "index.mjs",
-    "use": "@vercel/node",
-    "config": { "includeFiles": ["dist/**"] }
-   }
+    { "src": "index.mjs", "use": "@vercel/node" }
   ],
   "routes": [
-   {
-    "src": "/(.*)",
-    "dest": "index.mjs"
-   }
+    { "src": "/.*", "dest": "index.mjs" }
   ]
- }
+}
